--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,6 +8,16 @@
   font-size: 1.2rem;
 }
 
+.email-icon::before {
+  content: "\e158";
+  font-family: "Material Symbols Outlined";
+  position: absolute;
+  left: 0.5rem;
+  top: 52%;
+  transform: translateY(-50%);
+  font-size: 1.2rem;
+}
+
 .form-group.password-icon::before {
   content: "\e897";
   font-family: "Material Symbols Outlined";
@@ -22,27 +32,136 @@
   padding: 0 2rem;
 }
 
-.password-visibility-button {
+.visibility-button {
   display: flex;
   align-items: center;
   justify-content: center;
   background: none;
   border: none;
+  border-radius: 50%;
   position: absolute;
   right: 0;              
   top: 50%;                    
-  transform: translateY(-50%); 
-  outline: none;             
+  transform: translateY(-50%);          
   font-size: 1.2rem;           
-  color: #000000;            
+  color: #000000;     
+  margin: 0 5px;       
 }
 
-.password-visibility-button:hover {
+.image-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: none;
+  border: none;
+  border-radius: 50%;        
+  font-size: 1.2rem;           
+  color: #000000;     
+  margin: 0 5px;       
+}
+
+.visibility-button:hover, .image-button:hover {
   color: #666;
+}
+
+.visibility-button:focus, .image-button:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.2rem rgba(38, 143, 255, 0.5);
 }
 
 .recaptcha-container {
   display: flex;
-  justify-content: center; /* Horizontally center the child elements */
-  align-items: center;     /* Vertically center the child elements */
+  justify-content: center;
+  align-items: center;
+}
+
+.logo {
+  width: 120px;
+  height: auto;
+}
+
+.header-custom {
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
+.footer-custom {
+  box-shadow: 0px -2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.custom-ul > .nav-item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.spinner-overlay {
+  top: 0;
+  left: 0;
+}
+
+.login-width {
+  width: 350px;
+}
+
+.registration-width {
+  width: 1110px;
+}
+
+.hamburger-menu {
+  font-size: 3rem;
+}
+
+.menu-container {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  height: 100%;
+  width: 300px;
+  background: white;
+  border-left: 1px solid #ddd;
+  z-index: 10;
+  transition: right 0.3s ease;
+  padding: 1rem;
+  overflow-y: auto;
+}
+
+.menu-container.visible {
+  right: 0;
+}
+
+
+
+#subscribe-button {
+  border-radius: 0rem 0.25rem 0.25rem 0rem;
+}
+
+#subscribe-input {
+  border-radius: 0.25rem 0rem 0rem 0.25rem;
+  padding-left: 2rem;
+}
+
+.fi {
+  margin: 0 0.7rem;
+  font-size: 1.5rem;
+}
+
+a.social-icons:hover {
+  text-decoration: none;
+}
+
+.subscribe-heading {
+  color: #5f0d80;
+  font-weight: bold;
+}
+
+.language-dropdown {
+  padding: 0.3rem 0.8rem;
+  border-color: transparent;
+  border-radius: 0.25rem;
+  font-size: 16px;
+  background-color: #dfdfdf;
+}
+
+.menu-icon {
+  margin: 0 0.5rem;
+  vertical-align: text-bottom;
 }
